# vrzn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tasks.py  vrzn.toml
.github/workflows/: build-wheels.yml
tests/: __init__.py  test_cli.py  test_config.py  test_locations.py  test_presets.py  test_version.py
vrzn/: __init__.py  cli.py  config.py  locations.py  presets.py  version.py
