# Packaging configuration file for vrzn
# ----------------------------------------------------------------------------------------------------------------------
#   Guide: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
#   Spec:  https://packaging.python.org/en/latest/specifications/pyproject-toml/
#
#   Note: The pyproject.toml spec is still being adopted by many tools and IDEs. For this reason, please place your
#         requirements in the requirements.txt file. This spec is written to dynamically use those dependencies.


# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "vrzn"
dynamic = ["version", "dependencies"]
description = "Language-agnostic version management across project files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["version", "versioning", "pep440", "semver", "cli"]
authors = [
    {name = "Scott Arne Johnson", email = "scott.arne.johnson@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["invoke", "build", "pytest>=7.0", "pytest-cov", "pre-commit>=3.0", "ruff>=0.1.0", "mypy>=1.0", "pyyaml>=6.0"]

[project.scripts]
vrzn = "vrzn.cli:main"

# ----------------------------------------------------------------------------------------
# These configurations are specific to the `setuptools` build backend
# ----------------------------------------------------------------------------------------

[tool.setuptools.packages.find]

# Indicate the name of our package
include = ["vrzn*"]

# Exclude any test directory
exclude = ["*test*"]


[tool.setuptools.dynamic]

# Get the version from a "single source of truth"
version = {attr = "vrzn.__version__"}

# Package dependencies (these will be installed by pip)
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = {file = ["requirements.txt"]}


# ----------------------------------------------------------------------------------------
# Ruff configuration (linting and formatting)
# https://docs.astral.sh/ruff/configuration/
# ----------------------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["vrzn"]


# ----------------------------------------------------------------------------------------
# MyPy configuration (type checking)
# https://mypy.readthedocs.io/en/stable/config_file.html
# ----------------------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]


# ----------------------------------------------------------------------------------------
# Pytest configuration
# https://docs.pytest.org/en/stable/reference/customize.html
# ----------------------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
    "slow: marks tests as slow (deselect with '-m not slow')",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]